# openai-gpt-client

./: .gitignore  Cargo.toml  README.md  _build.rs  build.rs
src/: chat.rs  client.rs  conversations.rs  lib.rs  main.rs  model_variants.rs  models.rs  text_completion.rs
src/chat_roles/: conversation_partner.rs  language_teacher.rs  mod.rs
