[package]
name = "openai-gpt-client"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Dave Beesley <david.beesley@pm.me>"]
repository = "https://github.com/davidbeesley/openai-gpt-client"

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
# convert_case = "0.6.0"

# Import Tokio
tokio = { version = "*", features = ["full"] }

# Impord serde json
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_with = "1.9.3"

# Import reqwest
reqwest = { version = "*", features = ["json"] }

[build-dependencies]
convert_case = "0.6.0"
# Impord serde json
serde = { version = "*", features = ["derive"] }
serde_json = "*"
# Import reqwest
reqwest = { version = "*", features = ["json", "blocking"] }
