[package]
name = "chatgpt"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Dave Beesley <david.beesley@pm.me>"]
repository = "https://github.com/davidbeesley/chatgpt-client"
build = "build.rs"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
# convert_case = "0.6.0"

# Import Tokio
tokio = { version = "*", features = ["full"] }

# Impord serde json
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_with = "2.2.0"

# Import reqwest
reqwest = { version = "*", features = ["json"] }

# Import thiserror
thiserror = "1.0.38"

[build-dependencies]
convert_case = "0.6.0"
# Impord serde json
serde = { version = "*", features = ["derive"] }
serde_json = "*"
# Import reqwest
reqwest = { version = "*", features = ["json", "blocking"] }
