[package]
name = "openai-gpt-client"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Dave Beesley <david.beesley@pm.me>"]
repository = "https://github.com/davidbeesley/openai-gpt-client"
description = "A simple client for OpenAI's GPT-3 API"

[dependencies]
log = "0.4.17"


# Impord serde json
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "2.2.0"

# Import reqwest
reqwest = { version = "0.11.14", features = ["json"] }

# Import thiserror
thiserror = "1.0.38"

